testdata/baselines/reference/submodule/compiler/moduleResolution_explicitNodeModulesImport.errors.txt
/src/index.ts(1,19): error TS2307: Cannot find module '../node_modules/foo' or its corresponding type declarations.


==== /src/index.ts (1 errors) ====
    import { x } from "../node_modules/foo";
                      ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module '../node_modules/foo' or its corresponding type declarations.
    
==== /node_modules/foo/index.js (0 errors) ====
    exports.x = 0;
    